# AMBER

./: .gitmodules  README.md  pyproject.toml
notebook/anomaly_detection/: 0.0 AD dataset visualization.ipynb  0.1 torchxrayvision - Overview.ipynb  0.2 torchxrayvision - Anatomy segmentation.ipynb  0.3 VinDrCXR anatomical analysis.ipynb  1.0 AnomalyRadDINOv1 - Build memory.ipynb  1.1 AnomalyRadDINOv2 - Build memory.ipynb  2.0 AnomalyRadDINOv1 - Inference.ipynb  2.1 AnomalyRadDINOv2 - Inference (Full anats).ipynb  2.2 AnomalyRadDINOv2 - Inference (Ablation studies).ipynb  3.0 Computational complexity report.ipynb  3.1 MedIAnomaly VinDrCXR - Ablation study analysis.ipynb  3.2 MedIAnomaly RSNA - Ablation study analysis.ipynb  3.3 MedIAnomaly benchmarking against baselines.ipynb  4.0 BMAD RSNA - Ablation study analysis.ipynb  4.1 BMAD RSNA - Failure case analysis.ipynb
notebook/anomaly_detection/benchmarking/bmad/rsna/v1/aamb/: inference_case_1.npz  inference_case_10.npz  inference_case_11.npz  inference_case_2.npz  inference_case_3.npz  inference_case_4.npz  inference_case_5.npz  inference_case_6.npz  inference_case_7.npz  inference_case_8.npz  inference_case_9.npz
notebook/anomaly_detection/benchmarking/bmad/rsna/v2/aamb/: inference_case_1.npz  inference_case_10.npz  inference_case_11.npz  inference_case_2.npz  inference_case_3.npz  inference_case_4.npz  inference_case_5.npz  (+4 more)
src/: utils.py
src/memory_bank/: anomaly_detection.py  anomaly_raddino.py  anomaly_raddino_v2.py  binary_classification.py  binary_cxr_dataset.py  build_memory.py  cxr_dataset.py  utils.py
(+486 files in other folders)
