[project]
name = "amber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.3.0",
    "ninja>=1.13.0",
    "pycocotools>=2.0.11",
    "scikit-learn>=1.9.0",
    "timm>=1.0.28",
    "torch>=2.13.0",
    "torchxrayvision>=1.5.2",
    "tqdm>=4.68.4",
]
